// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoAudienceBannerWidget with a view-only user who's never populated their audience selection should render correctly. 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--analyticsNoAudienceBanner googlesitekit-widget--no-padding"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="googlesitekit-lean-cta-banner googlesitekit-no-audience-banner"
      >
        <div
          class="googlesitekit-lean-cta-banner__body"
        >
          <div
            class="googlesitekit-lean-cta-banner__body-icon"
          >
            <svg />
          </div>
          <div
            class="googlesitekit-lean-cta-banner__body-content"
          >
            <p>
              You don’t have any visitor groups selected. 
              <button
                class="googlesitekit-cta-link googlesitekit-cta-link--secondary"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Select groups
                </span>
              </button>
              .
            </p>
          </div>
        </div>
        <div
          class="googlesitekit-lean-cta-banner__graphic"
        >
          <svg />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoAudienceBannerWidget with a view-only user who's previously populated their audience selection should render correctly. 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--analyticsNoAudienceBanner googlesitekit-widget--no-padding"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="googlesitekit-lean-cta-banner googlesitekit-no-audience-banner"
      >
        <div
          class="googlesitekit-lean-cta-banner__body"
        >
          <div
            class="googlesitekit-lean-cta-banner__body-icon"
          >
            <svg />
          </div>
          <div
            class="googlesitekit-lean-cta-banner__body-content"
          >
            <p>
              It looks like your visitor groups aren’t available anymore. 
              <button
                class="googlesitekit-cta-link googlesitekit-cta-link--secondary"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Select other groups
                </span>
              </button>
              .
            </p>
          </div>
        </div>
        <div
          class="googlesitekit-lean-cta-banner__graphic"
        >
          <svg />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoAudienceBannerWidget with an authenticated user who's never populated their audience selection should render correctly. 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--analyticsNoAudienceBanner googlesitekit-widget--no-padding"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="googlesitekit-lean-cta-banner googlesitekit-no-audience-banner"
      >
        <div
          class="googlesitekit-lean-cta-banner__body"
        >
          <div
            class="googlesitekit-lean-cta-banner__body-icon"
          >
            <svg />
          </div>
          <div
            class="googlesitekit-lean-cta-banner__body-content"
          >
            <p>
              You don’t have any visitor groups selected. 
              <button
                class="googlesitekit-cta-link googlesitekit-cta-link--secondary"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Select groups
                </span>
              </button>
              .
            </p>
            <p>
              You can deactivate this widget in 
              <button
                class="googlesitekit-cta-link googlesitekit-cta-link--secondary"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Settings
                </span>
              </button>
              .
            </p>
          </div>
        </div>
        <div
          class="googlesitekit-lean-cta-banner__graphic"
        >
          <svg />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoAudienceBannerWidget with an authenticated user who's previously populated their audience selection should render correctly. 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--analyticsNoAudienceBanner googlesitekit-widget--no-padding"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="googlesitekit-lean-cta-banner googlesitekit-no-audience-banner"
      >
        <div
          class="googlesitekit-lean-cta-banner__body"
        >
          <div
            class="googlesitekit-lean-cta-banner__body-icon"
          >
            <svg />
          </div>
          <div
            class="googlesitekit-lean-cta-banner__body-content"
          >
            <p>
              It looks like your visitor groups aren’t available anymore. 
              <button
                class="googlesitekit-cta-link googlesitekit-cta-link--secondary"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Select other groups
                </span>
              </button>
              .
            </p>
            <p>
              You can deactivate this widget in 
              <button
                class="googlesitekit-cta-link googlesitekit-cta-link--secondary"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Settings
                </span>
              </button>
              .
            </p>
          </div>
        </div>
        <div
          class="googlesitekit-lean-cta-banner__graphic"
        >
          <svg />
        </div>
      </div>
    </div>
  </div>
</div>
`;
